<resources>
    <string name="app_name">RecipesApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="recipes_fragment_label">Recipes</string>
    <string name="favorites_fragment_label">Favorites</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="recipe_detail_fragment_label">Recipe Detail</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="vegan">Vegan</string>
    <string name="not_vegan">Not vegan</string>
    <string name="no_data">No data</string>

    <string name="apply">Apply</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole 30</string>

    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>

    <string name="no_internet">⚠️ No internet connection. Recipes could be outdated.</string>

    <string name="overview">Overview</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

</resources>