<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.recipes.filters.FiltersBottomSheetFragment">

    <TextView
        android:id="@+id/tv_mealType_filtersBSF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/hsv_mealTypes_filterBSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mealType_filtersBSF">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipG_mealTypes_filterBSF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mainMealType_filterBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sideDish_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_dessert_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_appetizer_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_salad_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_bread_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_breakfast_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_soup_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_beverage_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_sauce_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_marinade_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_fingerFood_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood" />

                <com.google.android.material.chip.Chip
                    android:tag=""
                    android:id="@+id/chip_snack_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_drink_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_dietType_filtersBSF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsv_mealTypes_filterBSF" />

    <HorizontalScrollView
        android:id="@+id/hsv_dietTypes_filtersBSF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dietType_filtersBSF">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipG_dietType_filtersBSF"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_glutenFree_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ketogenic_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegan_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pescetarian_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_paleo_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_primal_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_whole30_filtersBSF"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_apply_filtersBSF"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsv_dietTypes_filtersBSF" />

</androidx.constraintlayout.widget.ConstraintLayout>