<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/recipesFragment">

    <fragment
        android:id="@+id/recipesFragment"
        android:name="com.rastete.recipesapp.presentation.recipes.RecipesFragment"
        android:label="@string/recipes_fragment_label"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_RecipesFragment_to_FavoritesFragment"
            app:destination="@id/favoritesFragment" />
        <action
            android:id="@+id/action_recipesFragment_to_filtersBottomSheetFragment"
            app:destination="@id/filtersBottomSheetFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.rastete.recipesapp.presentation.favorites.FavoritesFragment"
        android:label="@string/favorites_fragment_label"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.rastete.recipesapp.presentation.settings.SettingsFragment"
        android:label="@string/settings_fragment_label" />

    <dialog
        android:id="@+id/filtersBottomSheetFragment"
        android:name="com.rastete.recipesapp.presentation.recipes.FiltersBottomSheetFragment"
        android:label="fragment_filters_bottom_sheet"
        tools:layout="@layout/fragment_filters_bottom_sheet" >
        <action
            android:id="@+id/action_filtersBottomSheetFragment_to_recipesFragment"
            app:destination="@id/recipesFragment"
            app:popUpTo="@id/recipesFragment"
            app:popUpToInclusive="true" />
    </dialog>


</navigation>